default/objects/Template_Section__c/Template_Section__c.object-meta.xml
<CustomObject>
    <label>Template Section</label>
    <nameField>
        <label>Template Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>