default/objects/Template_Section__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Template Sections</relationshipLabel>
    <relationshipName>Template_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>