default/objects/Template_Section__c/fields/Component_Index__c.field-meta.xml
<CustomField>
    <fullName>Component_Index__c</fullName>
    <label>Component Index</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>