default/objects/Template_Section__c/fields/Component_Label__c.field-meta.xml
<CustomField>
    <fullName>Component_Label__c</fullName>
    <label>Component Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>