default/objects/Template_Section__c/fields/Is_Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Is_Related_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Related Object</label>
    <type>Checkbox</type>
</CustomField>